--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     }
   },
   "require-dev": {
-    "pestphp/pest": "^2.9"
+    "pestphp/pest": "^2.9",
+    "pestphp/pest-plugin-faker": "^2.0"
   },
   "config": {
     "allow-plugins": {
