--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,10 @@ jobs:
         with:
           php-version: 8.2
           tools: composer:v2
-          coverage: none
+          coverage: xdebug
  
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
  
       - name: Tests
-        run: composer test
+        run: ./vendor/bin/pest
