build: add branch stage

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,9 @@ name: Tests
  
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "stage" ]
   pull_request:
-    branches: [ "master" ]
-
+    branches: [ "master", "stage" ]
  
 jobs:
   ci:
