--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "aguiarrdev/correios",
+  "name": "devaguia/correios",
   "version": "1.0.0",
   "description": "Correios API library for PHP",
   "license": "GPL-3.0",
